criando diretorio para react e limpando infos desnecessarias

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,4 @@
+/* faz reset de algumas coisas */
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
